war/src/main/webapp/engines/jahia-anthracite/_sidepanel.scss
/* ... */
#JahiaGxtContentBrowseTab {
	.x-grid-empty {
		&:before {
			@include text(14px, _theme-color(primary), $FONT--WEIGHT---SEMILIGHT);
			content: $text_empty;
			display: block;
			padding: 16px;
			position: absolute;
			top: 0;
		}
	}
}

// body[data-indigo-gwt-side-panel="open"] .x-viewport-editmode #JahiaGxtSettingsTab {
//
// 	&::before {
// 		position: relative;
// 	    line-height: 40px;
// 	    margin-bottom: 45px;
// 		top: 0;
// 		left: 0;
// 	}
//
// }

#JahiaGxtPagesTab,
#JahiaGxtCreateContentTab,
#JahiaGxtContentBrowseTab,
#JahiaGxtFileImagesBrowseTab,
#JahiaGxtSearchTab,
#JahiaGxtCategoryBrowseTab,
#JahiaGxtChannelsTab,
#JahiaGxtSettingsTab, {
	// Common for ALL Side Panel Contents

	form {
		.x-form-item {
			padding: 2px;
		}
	}

	.x-viewport-editmode & {
		@extend %CSS_BLOCK--SIDE_PANEL--TAB--CONTENTS;

	}
	.x-viewport-adminmode &,
	.x-viewport-dashboardmode & {

		height:auto !important; // DEV TEMP

		&.tab_serverSettings {
			// margin-top: 90px;

			&.x-hide-display {
				display: block!important;
			}

			> .x-component {
				&::before {
					content: $text_server_settings;
					margin: 0 0 4px 8px;

					// text-transform: uppercase;
					@include text(13px, _theme-color(primary), $FONT--WEIGHT---LIGHT);
				}
			}
		}

		&.tab_systemSiteSettings {

			&.x-hide-display {
				display: block!important;
			}

			> .x-component {
				margin-top: 20px;
				&::before {
					content: $text_system_settings;
					margin: 0 0 4px 8px;

					// text-transform: uppercase;
					@include text(13px, _theme-color(primary), $FONT--WEIGHT---LIGHT);
				}
			}

		}
	}


	&::before {
		content: $text_site_settings;
		@extend %CSS_BLOCK--SIDE_PANEL--TITLE;
		display: block;
		margin: 24px 0 30px -3px;

		body[data-V2="true"] & {
			margin: 22px 0 30px -15px;
			transition: all 0.2s ease-in 0s;
			line-height: 40px;
		}

		font-size: 30px;
		line-height: 47px;
		letter-spacing: -0.5px;

		body[data-indigo-gwt-side-panel="open"][data-V2="true"] & {
			margin: 26px 0 30px 1px;
		}



		body[data-edit-window-style="settings"] &,
		.x-viewport-adminmode &,
		.x-viewport-dashboardmode & {
			font-size: 36px;
			font-weight: 100;

			padding-left: 0px;
		    position: fixed;
		    top: 15px!important;
		    left: 84px!important;
		}

		.x-viewport-adminmode & {
			content: $text_administration !important;
		    // padding-left: 0px;
		    // position: fixed;
		    // top: 15px!important;
		    // left: 84px!important;

		}

		.x-viewport-dashboardmode & {
			content: $text_home !important;
			top: 40px;
		    left: 75px;
		}

		/* END TEMP */
	}

	> .x-border-layout-ct {
		/* Intermediary Container in CREATE tabs */
		height: 100%!important;
		width: 100%!important;

		> .x-form-field-wrap {
			/* Contains CREATE Search input */
			// position: fixed!important;
			// bottom: 10px;
			// top:auto!important;
			// height: auto!important;
			// width: auto!important;
		}

	}

	.x-box-inner {
		height: 100%!important;
		width: 100%!important;

		.x-box-item {
			/* Used in COntent Tabs, 2 x-box-items side by side contain list and results window */
			height: 100%!important;
			display: inline-block;
			position: relative!important;
			width: 100% !important;
			top: 0!important;
			background: transparent!important;
			vertical-align: top;

			&:nth-child(1) {
				padding-right: 20px;
				box-sizing: border-box;

			}

			> .x-component {
				/* Container for List View */
				width: 100%!important;
				background: transparent!important;
				// height: calc(100% - 81px)!important;
			}
		}
	}

}

